--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.5.1",
